add pagination utils and new routes
