# class_api/src/dto/ClasseDTO.ts
@@ -1,0 +1,6 @@
+import {Classe} from '../app/models/Classe';
+
+export interface ClasseDTO extends Classe{
+	  last_comment:string;
+	  last_comment_date:Date;
+}
